--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -98,7 +98,7 @@ required = [
 
 [[constraint]]
   name = "github.com/giantswarm/microkit"
-  branch = "dep-use-versions"
+  version = "~0.1.0"
 
 [[constraint]]
   name = "github.com/giantswarm/micrologger"
