--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -44,9 +44,9 @@ required = [
   name = "github.com/docker/distribution"
   branch = "master"
 
-[[constraint]]
+[[override]]
+  branch = "fix-application-crd-errors"
   name = "github.com/giantswarm/apiextensions"
-  version = "~0.1.0"
 
 [[constraint]]
   name = "github.com/giantswarm/appcatalog"
