--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
 version: 2.1
 orbs:
-  architect: giantswarm/architect@0.8.2
+  architect: giantswarm/architect@0.8.5
 
 jobs:
   build:
@@ -21,16 +21,6 @@ jobs:
         - ./app-operator
         - ./architect
 
-  deploy:
-    machine: true
-    steps:
-    - checkout
-    - attach_workspace:
-        at: .
-    - deploy:
-        command: |
-            ./architect deploy
-
 workflows:
   build_e2e:
     jobs:
@@ -40,7 +30,7 @@ workflows:
               only: /^v.*/
 
       - architect/push-to-docker:
-          name: push-app-operator-to-quay
+          name: "push-app-operator-to-quay"
           image: "quay.io/giantswarm/app-operator"
           username_envar: "QUAY_USERNAME"
           password_envar: "QUAY_PASSWORD"
@@ -48,12 +38,70 @@ workflows:
             - build
 
       - architect/push-to-docker:
-          name: push-app-operator-to-aliyun
+          name: "push-app-operator-to-aliyun"
           image: "registry-intl.cn-shanghai.aliyuncs.com/giantswarm/app-operator"
           username_envar: "ALIYUN_USERNAME"
           password_envar: "ALIYUN_PASSWORD"
           requires:
             - build
+
+      - architect/push-to-app-catalog:
+          name: "push-app-operator-to-control-plane-app-catalog"
+          app_catalog: "control-plane-catalog"
+          app_catalog_test: "control-plane-test-catalog"
+          chart: "app-operator"
+          requires:
+            - push-app-operator-to-quay
+            - push-app-operator-to-aliyun
+          filters:
+            # Trigger job also on git tag.
+            tags:
+              only: /^v.*/
+
+      - architect/push-to-app-collection:
+          name: "push-app-operator-to-aws-app-collection"
+          app_name: "app-operator"
+          app_collection_repo: "aws-app-collection"
+          unique: "true"
+          requires:
+            - push-app-operator-to-control-plane-app-catalog
+          filters:
+            # Do not trigger the job on branches.
+            branches:
+              ignore: /.*/
+            # Trigger job also on git tag.
+            tags:
+              only: /^v.*/
+
+      - architect/push-to-app-collection:
+          name: "push-app-operator-to-azure-app-collection"
+          app_name: "app-operator"
+          app_collection_repo: "azure-app-collection"
+          unique: "true"
+          requires:
+            - push-app-operator-to-control-plane-app-catalog
+          filters:
+            # Do not trigger the job on branches.
+            branches:
+              ignore: /.*/
+            # Trigger job also on git tag.
+            tags:
+              only: /^v.*/
+
+      - architect/push-to-app-collection:
+          name: "push-app-operator-to-kvm-app-collection"
+          app_name: "app-operator"
+          app_collection_repo: "kvm-app-collection"
+          unique: "true"
+          requires:
+            - push-app-operator-to-control-plane-app-catalog
+          filters:
+            # Do not trigger the job on branches.
+            branches:
+              ignore: /.*/
+            # Trigger job also on git tag.
+            tags:
+              only: /^v.*/
 
       - architect/integration-test:
           name: basic-integration-test
@@ -66,11 +114,3 @@ workflows:
           test-dir: "integration/test/app/kubeconfig"
           requires:
             - build
-
-      - deploy:
-          name: deploy
-          requires:
-            - push-app-operator-to-aliyun
-          filters:
-            branches:
-              only: master
