--- a/helm/app-operator/Chart.yaml
+++ b/helm/app-operator/Chart.yaml
@@ -1,4 +1,6 @@
-apiVersion: v1
-description: A Helm chart for the app-operator
-name: app-operator-chart
-version: 1.0.0-[[ .SHA ]]
+apiVersion: "v1"
+appVersion: "[[ .AppVersion ]]"
+description: "A Helm chart for the app-operator."
+home: "https://github.com/giantswarm/app-operator"
+name: "app-operator"
+version: "[[ .Version ]]"
