Cancel when cluster have chart-operator helm v2 deployment (#237)
* cancel when cluster have chart-operator helm v2 deployment

* rbac fix

* remove deploy create permission

* log fmt

--- a/helm/app-operator-chart/templates/rbac.yaml
+++ b/helm/app-operator-chart/templates/rbac.yaml
@@ -72,11 +72,11 @@ rules:
   verbs:
   - "create"
 - apiGroups:
-  - extensions
+  - apps
   resources:
   - deployments
   verbs:
-  - 'create'
+  - "get"
 - apiGroups:
   - ""
   resources:
