--- a/helm/app-operator/templates/deployment.yaml
+++ b/helm/app-operator/templates/deployment.yaml
@@ -1,15 +1,14 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ .Values.name }}
-  namespace: {{ .Values.namespace }}
+  name: {{ tpl .Values.resource.default.name  . }}
+  namespace: {{ tpl .Values.resource.default.namespace  . }}
   labels:
-    app: {{ .Values.name }}
-    giantswarm.io/service-type: "managed"
+    {{- include "app-operator.labels" . | nindent 4 }}
 spec:
   selector:
     matchLabels:
-      app: {{ .Values.name }}
+      {{- include "app-operator.selectorLabels" . | nindent 6 }}
   replicas: 1
   revisionHistoryLimit: 3
   strategy:
@@ -17,34 +16,33 @@ spec:
   template:
     metadata:
       labels:
-    app: {{ .Values.project.name }}
-    version: {{ .Values.project.version }}
+        {{- include "app-operator.selectorLabels" . | nindent 8 }}
       annotations:
         releasetime: {{ $.Release.Time }}
     spec:
       volumes:
-      - name: {{ .Values.name }}
+      - name: {{ .Chart.Name }}
         configMap:
-          name: {{ .Values.name }}
+          name: {{ tpl .Values.resource.default.name  . }}
           items:
           - key: config.yaml
             path: config.yaml
-      serviceAccountName: {{ .Values.name }}
+      serviceAccountName: {{ tpl .Values.resource.default.name  . }}
       securityContext:
         runAsUser: {{ .Values.userID }}
         runAsGroup: {{ .Values.groupID }}
       containers:
-      - name: {{ .Values.name }}
+      - name: {{ .Chart.Name }}
         image: "{{ .Values.Installation.V1.Registry.Domain }}/{{ .Values.image.repository }}:{{ .Values.image.tag }}"
         volumeMounts:
-        - name: {{ .Values.name }}
-          mountPath: /var/run/{{ .Values.name }}/configmap/
+        - name: {{ .Chart.Name }}
+          mountPath: /var/run/{{ .Chart.Name }}/configmap/
         ports:
         - name: http
           containerPort: {{ .Values.port }}
         args:
         - daemon
-        - --config.dirs=/var/run/{{ .Values.name }}/configmap/
+        - --config.dirs=/var/run/{{ .Chart.Name }}/configmap/
         - --config.files=config
         livenessProbe:
           httpGet:
@@ -59,4 +57,4 @@ spec:
           initialDelaySeconds: 15
           timeoutSeconds: 1
         resources:
-{{ toYaml .Values.resources | indent 10 }}
+{{ toYaml .Values.deployment-resource | indent 10 }}
