--- a/helm/app-operator/templates/rbac.yaml
+++ b/helm/app-operator/templates/rbac.yaml
@@ -1,10 +1,9 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: {{ .Values.name }}
+  name: {{ tpl .Values.resource.default.name  . }}
   labels:
-    app: {{ .Values.name }}
-    giantswarm.io/service-type: "managed"
+    {{- include "app-operator.labels" . | nindent 4 }}
 rules:
 - apiGroups:
   - apiextensions.k8s.io
@@ -111,10 +110,9 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: {{ .Values.name }}-chart
+  name: {{ tpl .Values.resource.chart.name  . }}
   labels:
-    app: {{ .Values.name }}
-    giantswarm.io/service-type: "managed"
+    {{- include "app-operator.labels" . | nindent 4 }}
 rules:
   - apiGroups:
       - apiextensions.k8s.io
@@ -132,42 +130,39 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: ClusterRoleBinding
 metadata:
-  name: {{ .Values.name }}
+  name: {{ tpl .Values.resource.default.name  . }}
   labels:
-    app: {{ .Values.name }}
-    giantswarm.io/service-type: "managed"
+    {{- include "app-operator.labels" . | nindent 4 }}
 subjects:
   - kind: ServiceAccount
-    name: {{ .Values.name }}
-    namespace: {{ .Values.namespace }}
+    name: {{ tpl .Values.resource.default.name  . }}
+    namespace: {{ tpl .Values.resource.default.namespace  . }}
 roleRef:
   kind: ClusterRole
-  name: {{ .Values.name }}
+  name: {{ tpl .Values.resource.default.name  . }}
   apiGroup: rbac.authorization.k8s.io
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: {{ .Values.name }}-chart
+  name: {{ tpl .Values.resource.chart.name  . }}
   labels:
-    app: {{ .Values.name }}-chart
-    giantswarm.io/service-type: "managed"
+    {{- include "app-operator.labels" . | nindent 4 }}
 subjects:
   - kind: ServiceAccount
-    name: {{ .Values.name }}
-    namespace: {{ .Values.namespace }}
+    name: {{ tpl .Values.resource.default.name  . }}
+    namespace: {{ tpl .Values.resource.default.namespace  . }}
 roleRef:
   kind: ClusterRole
-  name: {{ .Values.name }}-chart
+  name: {{ tpl .Values.resource.chart.name  . }}
   apiGroup: rbac.authorization.k8s.io
 ---
 apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: ClusterRole
 metadata:
-  name: {{ .Values.name }}-psp
+  name: {{ tpl .Values.resource.psp.name  . }}
   labels:
-    app: {{ .Values.name }}-psp
-    giantswarm.io/service-type: "managed"
+    {{- include "app-operator.labels" . | nindent 4 }}
 rules:
   - apiGroups:
       - extensions
@@ -176,20 +171,19 @@ rules:
     verbs:
       - use
     resourceNames:
-      - {{ .Values.name }}-psp
+      - {{ tpl .Values.resource.psp.name  . }}
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: {{ .Values.name }}-psp
+  name: {{ tpl .Values.resource.psp.name  . }}
   labels:
-    app: {{ .Values.name }}-psp
-    giantswarm.io/service-type: "managed"
+    {{- include "app-operator.labels" . | nindent 4 }}
 subjects:
   - kind: ServiceAccount
-    name: {{ .Values.name }}
-    namespace: {{ .Values.namespace }}
+    name: {{ tpl .Values.resource.default.name  . }}
+    namespace: {{ tpl .Values.resource.default.namespace  . }}
 roleRef:
   kind: ClusterRole
-  name: {{ .Values.name }}-psp
+  name: {{ tpl .Values.resource.psp.name  . }}
   apiGroup: rbac.authorization.k8s.io
