--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -62,7 +62,7 @@ workflows:
           name: push-app-operator-to-control-plane-app-catalog
           app_catalog: "control-plane-catalog"
           app_catalog_test: "control-plane-test-catalog"
-          chart: "cluster-operator"
+          chart: "app-operator"
           # Make sure docker image is successfully built.
           requires:
             - push-app-operator-to-quay
@@ -73,7 +73,7 @@ workflows:
       # deploy to aws installations (only tags)
       - architect/push-to-app-collection:
           name: push-app-operator-to-aws-app-collection
-          app_name: "cluster-operator"
+          app_name: "app-operator"
           app_collection_repo: "aws-app-collection"
           requires:
             - push-app-operator-to-control-plane-app-catalog
@@ -86,7 +86,7 @@ workflows:
       # deploy to azure installations (only tags)
       - architect/push-to-app-collection:
           name: push-app-operator-to-azure-app-collection
-          app_name: "cluster-operator"
+          app_name: "app-operator"
           app_collection_repo: "azure-app-collection"
           requires:
             - push-app-operator-to-control-plane-app-catalog
@@ -99,7 +99,7 @@ workflows:
       # deploy to kvm installations (only tags)
       - architect/push-to-app-collection:
           name: push-app-operator-to-kvm-app-collection
-          app_name: "cluster-operator"
+          app_name: "app-operator"
           app_collection_repo: "kvm-app-collection"
           requires:
             - push-app-operator-to-control-plane-app-catalog
