--- a/helm/app-operator-chart/templates/configmap.yaml
+++ b/helm/app-operator-chart/templates/configmap.yaml
@@ -15,6 +15,8 @@ data:
       listen:
         address: 'http://0.0.0.0:{{ .Values.port }}'
     service:
+      helm:
+        tillerNamespace:  '{{ .Values.tiller.namespace }}'
       image:
         registry: '{{ .Values.Installation.V1.Registry.Domain }}' 
       kubernetes:
