Update rbac rules for deployments

--- a/helm/app-operator-chart/templates/rbac.yaml
+++ b/helm/app-operator-chart/templates/rbac.yaml
@@ -72,11 +72,12 @@ rules:
   verbs:
   - "create"
 - apiGroups:
-  - extensions
+  - apps
   resources:
   - deployments
   verbs:
-  - 'create'
+  - get
+  - create
 - apiGroups:
   - ""
   resources:
