--- a/helm/app-operator/Chart.yaml
+++ b/helm/app-operator/Chart.yaml
@@ -1,4 +1,5 @@
 apiVersion: v1
 description: A Helm chart for the app-operator
 name: aws-operator
+appVersion: [[ .AppVersion ]]
 version: [[ .Version ]]
