--- a/helm/app-operator/values.yaml
+++ b/helm/app-operator/values.yaml
@@ -30,7 +30,7 @@ resource:
   psp:
     name: '{{ .Release.Name | replace "." "-" | trunc 47 }}-psp'
 
-deployment-resource:
+deployment:
   requests:
     cpu: 250m
     memory: 250Mi
