--- a/helm/app-operator/values.yaml
+++ b/helm/app-operator/values.yaml
@@ -30,6 +30,10 @@ resource:
   psp:
     name: '{{ .Release.Name | replace "." "-" | trunc 47 }}-psp'
 
+project:
+  branch: "[[ .Branch ]]"
+  commit: "[[ .SHA ]]"
+
 deployment:
   requests:
     cpu: 250m
