--- a/helm/app-operator/templates/network-policy.yaml
+++ b/helm/app-operator/templates/network-policy.yaml
@@ -1,14 +1,14 @@
 kind: NetworkPolicy
 apiVersion: networking.k8s.io/v1
 metadata:
-  name: {{ tpl .Values.resource.default.name  . }}
-  namespace: {{ tpl .Values.resource.default.namespace  . }}
+  name: {{ include "resource.default.name" . }}
+  namespace: {{ include "resource.default.namespace" . }}
   labels:
-    {{- include "app-operator.labels" . | nindent 4 }}
+    {{- include "labels.common" . | nindent 4 }}
 spec:
   podSelector:
     matchLabels:
-      {{- include "app-operator.selectorLabels" . | nindent 6 }}
+      {{- include "labels.selector" . | nindent 6 }}
   ingress:
   - ports:
     - port: {{ .Values.port }}
