--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,6 +66,7 @@ workflows:
           # Make sure docker image is successfully built.
           requires:
             - push-app-operator-to-quay
+            - push-chart-operator-to-aliyun
           filters:
             tags:
               only: /^v.*/
