--- a/helm/app-operator-chart/values.yaml
+++ b/helm/app-operator-chart/values.yaml
@@ -1,4 +1,4 @@
-# Default values for app-operator-chart.
+# Default values for app-operator chart.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
