Flattening app-operator (#240)
* add new charts

* change chart files

* add helper

* adding appcatalog logics

* fix naming

* adding appversion

* adding unique constraint

* why it was aws-operator

* adding home

* fix wrong character

* project values

* update helper files

* applying new helper functions

* fix end of file & circleCI dependency

* applying circleci config validate

* At the moment, opt out app collections

* get back deploy job

* using include name

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,11 +24,11 @@ jobs:
   deploy:
     machine: true
     steps:
-    - checkout
-    - attach_workspace:
-        at: .
-    - deploy:
-        command: |
+      - checkout
+      - attach_workspace:
+          at: .
+      - deploy:
+          command: |
             ./architect deploy
 
 workflows:
@@ -67,10 +67,16 @@ workflows:
           requires:
             - build
 
-      - deploy:
-          name: deploy
+      # build and push chart to app catalog
+      - architect/push-to-app-catalog:
+          name: push-app-operator-to-control-plane-app-catalog
+          app_catalog: "control-plane-catalog"
+          app_catalog_test: "control-plane-test-catalog"
+          chart: "app-operator"
+          # Make sure docker image is successfully built.
           requires:
+            - push-app-operator-to-quay
             - push-app-operator-to-aliyun
           filters:
-            branches:
-              only: master
+            tags:
+              only: /^v.*/
