--- a/helm/app-operator/values.yaml
+++ b/helm/app-operator/values.yaml
@@ -1,4 +1,4 @@
-# Default values for app-operator chart.
+# Default values for app-operator-chart.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
@@ -21,7 +21,11 @@ Installation:
     Registry:
       Domain: quay.io
 
-resources:
+project:
+  branch: "[[ .Branch ]]"
+  commit: "[[ .SHA ]]"
+
+deployment:
   requests:
     cpu: 250m
     memory: 250Mi
