--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -86,7 +86,7 @@ workflows:
           name: push-app-operator-to-aws-app-collection
           app_name: "app-operator"
           app_collection_repo: "aws-app-collection"
-          disable_force_upgrade: "true"
+          disable_force_upgrade: true
           unique: "true"
           requires:
             - push-app-operator-to-control-plane-app-catalog
@@ -101,7 +101,7 @@ workflows:
           name: push-app-operator-to-azure-app-collection
           app_name: "app-operator"
           app_collection_repo: "azure-app-collection"
-          disable_force_upgrade: "true"
+          disable_force_upgrade: true
           unique: "true"
           requires:
             - push-app-operator-to-control-plane-app-catalog
@@ -116,7 +116,7 @@ workflows:
           name: push-app-operator-to-kvm-app-collection
           app_name: "app-operator"
           app_collection_repo: "kvm-app-collection"
-          disable_force_upgrade: "true"
+          disable_force_upgrade: true
           unique: "true"
           requires:
             - push-app-operator-to-control-plane-app-catalog
