--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
 version: 2.1
 orbs:
-  architect: giantswarm/architect@0.8.11
+  architect: giantswarm/architect@0.8.12
 
 jobs:
   build:
@@ -80,3 +80,51 @@ workflows:
           filters:
             tags:
               only: /^v.*/
+
+      # deploy to aws installations (only tags)
+      - architect/push-to-app-collection:
+          context: "architect"
+          name: push-app-operator-to-aws-app-collection
+          app_name: "app-operator"
+          app_collection_repo: "aws-app-collection"
+          disable_force_upgrade: true
+          unique: "true"
+          requires:
+            - push-app-operator-to-control-plane-app-catalog
+          filters:
+            branches:
+              ignore: /.*/
+            tags:
+              only: /^v.*/
+
+      # deploy to azure installations (only tags)
+      - architect/push-to-app-collection:
+          context: "architect"
+          name: push-app-operator-to-azure-app-collection
+          app_name: "app-operator"
+          app_collection_repo: "azure-app-collection"
+          disable_force_upgrade: true
+          unique: "true"
+          requires:
+            - push-app-operator-to-control-plane-app-catalog
+          filters:
+            branches:
+              ignore: /.*/
+            tags:
+              only: /^v.*/
+
+      # deploy to kvm installations (only tags)
+      - architect/push-to-app-collection:
+          context: "architect"
+          name: push-app-operator-to-kvm-app-collection
+          app_name: "app-operator"
+          app_collection_repo: "kvm-app-collection"
+          disable_force_upgrade: true
+          unique: "true"
+          requires:
+            - push-app-operator-to-control-plane-app-catalog
+          filters:
+            branches:
+              ignore: /.*/
+            tags:
+              only: /^v.*
