--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,39 +2,13 @@ version: 2.1
 orbs:
   architect: giantswarm/architect@0.8.12
 
-jobs:
-  build:
-    machine: true
-    steps:
-    - checkout
-
-    - run: |
-        wget -q $(curl -sS -H "Authorization: token $RELEASE_TOKEN" https://api.github.com/repos/giantswarm/architect/releases/latest | grep browser_download_url | head -n 1 | cut -d '"' -f 4)
-        chmod +x ./architect
-        ./architect version
-    - run: ./architect build
-    - store_test_results:
-        path: /tmp/results
-    - persist_to_workspace:
-        root: .
-        paths:
-        - ./app-operator
-        - ./architect
-
-  deploy:
-    machine: true
-    steps:
-      - checkout
-      - attach_workspace:
-          at: .
-      - deploy:
-          command: |
-            ./architect deploy
-
 workflows:
-  build_e2e:
+  build:
     jobs:
-      - build:
+      - architect/go-build:
+          name: go-build
+          binary: aws-operator
+          resource_class: large
           filters:
             tags:
               only: /^v.*/
@@ -45,7 +19,7 @@ workflows:
           username_envar: "QUAY_USERNAME"
           password_envar: "QUAY_PASSWORD"
           requires:
-            - build
+            - go-build
 
       - architect/push-to-docker:
           name: push-app-operator-to-aliyun
@@ -53,19 +27,19 @@ workflows:
           username_envar: "ALIYUN_USERNAME"
           password_envar: "ALIYUN_PASSWORD"
           requires:
-            - build
+            - go-build
 
       - architect/integration-test:
           name: basic-integration-test
           test-dir: "integration/test/app/basic"
           requires:
-            - build
+            - go-build
 
       - architect/integration-test:
           name: kubeconfig-integration-test
           test-dir: "integration/test/app/kubeconfig"
           requires:
-            - build
+            - go-build
 
       # build and push chart to app catalog
       - architect/push-to-app-catalog:
