--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,6 +46,10 @@ workflows:
           password_envar: "QUAY_PASSWORD"
           requires:
             - build
+          filters:
+            # Trigger the job also on git tag.
+            tags:
+              only: /^v.*/
 
       - architect/push-to-docker:
           name: push-app-operator-to-aliyun
@@ -54,18 +58,12 @@ workflows:
           password_envar: "ALIYUN_PASSWORD"
           requires:
             - build
-
-      - architect/integration-test:
-          name: basic-integration-test
-          test-dir: "integration/test/app/basic"
-          requires:
-            - build
-
-      - architect/integration-test:
-          name: kubeconfig-integration-test
-          test-dir: "integration/test/app/kubeconfig"
-          requires:
-            - build
+          filters:
+            branches:
+              only: master
+            # Trigger the job also on git tag.
+            tags:
+              only: /^v.*/
 
       # build and push chart to app catalog
       - architect/push-to-app-catalog:
@@ -80,6 +78,20 @@ workflows:
           filters:
             tags:
               only: /^v.*/
+
+      - architect/integration-test:
+          name: basic-integration-test
+          test-dir: "integration/test/app/basic"
+          requires:
+            - build
+            - push-app-operator-to-control-plane-app-catalog
+
+      - architect/integration-test:
+          name: kubeconfig-integration-test
+          test-dir: "integration/test/app/kubeconfig"
+          requires:
+            - build
+            - push-app-operator-to-control-plane-app-catalog
 
       # deploy to aws installations (only tags)
       - architect/push-to-app-collection:
