--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -139,4 +139,4 @@ workflows:
             branches:
               ignore: /.*/
             tags:
-              only: /^v.*
+              only: /^v.*/
