--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,39 +2,12 @@ version: 2.1
 orbs:
   architect: giantswarm/architect@0.8.12
 
-jobs:
-  build:
-    machine: true
-    steps:
-    - checkout
-
-    - run: |
-        wget -q $(curl -sS -H "Authorization: token $RELEASE_TOKEN" https://api.github.com/repos/giantswarm/architect/releases/latest | grep browser_download_url | head -n 1 | cut -d '"' -f 4)
-        chmod +x ./architect
-        ./architect version
-    - run: ./architect build
-    - store_test_results:
-        path: /tmp/results
-    - persist_to_workspace:
-        root: .
-        paths:
-        - ./app-operator
-        - ./architect
-
-  deploy:
-    machine: true
-    steps:
-      - checkout
-      - attach_workspace:
-          at: .
-      - deploy:
-          command: |
-            ./architect deploy
-
 workflows:
-  build_e2e:
+  build:
     jobs:
-      - build:
+      - architect/go-build:
+          name: go-build
+          binary: app-operator
           filters:
             tags:
               only: /^v.*/
@@ -45,7 +18,7 @@ workflows:
           username_envar: "QUAY_USERNAME"
           password_envar: "QUAY_PASSWORD"
           requires:
-            - build
+            - go-build
           filters:
             # Trigger the job also on git tag.
             tags:
@@ -57,7 +30,7 @@ workflows:
           username_envar: "ALIYUN_USERNAME"
           password_envar: "ALIYUN_PASSWORD"
           requires:
-            - build
+            - go-build
           filters:
             branches:
               only: master
@@ -78,20 +51,6 @@ workflows:
           filters:
             tags:
               only: /^v.*/
-
-      - architect/integration-test:
-          name: basic-integration-test
-          test-dir: "integration/test/app/basic"
-          requires:
-            - build
-            - push-app-operator-to-control-plane-app-catalog
-
-      - architect/integration-test:
-          name: kubeconfig-integration-test
-          test-dir: "integration/test/app/kubeconfig"
-          requires:
-            - build
-            - push-app-operator-to-control-plane-app-catalog
 
       # deploy to aws installations (only tags)
       - architect/push-to-app-collection:
@@ -140,3 +99,17 @@ workflows:
               ignore: /.*/
             tags:
               only: /^v.*/
+
+      - architect/integration-test:
+          name: basic-integration-test
+          test-dir: "integration/test/app/basic"
+          requires:
+            - go-build
+            - push-app-operator-to-control-plane-app-catalog
+
+      - architect/integration-test:
+          name: kubeconfig-integration-test
+          test-dir: "integration/test/app/kubeconfig"
+          requires:
+            - go-build
+            - push-app-operator-to-control-plane-app-catalog
