--- a/helm/app-operator/templates/configmap.yaml
+++ b/helm/app-operator/templates/configmap.yaml
@@ -14,6 +14,14 @@ data:
       listen:
         address: 'http://0.0.0.0:{{ .Values.port }}'
     service:
+      collector:
+        apps:
+          defaultTeam: "batman"
+          teams: |
+            celestial: "azure-collector,azure-operator,etcd-backup-operator,releases-azure"
+            firecracker: "aws-operator,cluster-operator,kiam,releases-aws"
+            ludacris: "bridge-operator,cert-exporter,cert-operator,coredns-app,flannel-operator,ignition-operator,kvm-operator,kube-state-metrics-app,metrics-server-app,net-exporter,node-operator,release-operator,releases-kvm"
+            magic: "cluster-service,dex-app,g8s-cert-manager,g8s-efk,g8s-grafana,g8s-oauth2-proxy,g8s-prometheus,gatekeeper-app,gatekeeper-control-plane-rules,kubernetesd,rbac-operator,tokend,userd,vault-app"
       image:
         registry: '{{ .Values.Installation.V1.Registry.Domain }}' 
       kubernetes:
