helm3: Upgrading control planes to Helm 3 (#298)
* check status version with spec version before move on

* helm3: Enable releasemigration resource for control planes

* Only migrate helm 2 releases with chart CRs

* Fix logging

* Fixes for upgrading chart-operator in control planes

* fix rbac for deployments

* Use CR name not release name in migration logic

* compiling

* Add missing perms and tidy up clusterrole

* Put back code to not upgrade control planes

* Use chartNamespace from resource

Co-authored-by: Jihyuk Bok <jhbok@giantswarm.io>

--- a/helm/app-operator/templates/rbac.yaml
+++ b/helm/app-operator/templates/rbac.yaml
@@ -52,29 +52,57 @@ rules:
     - patch
     - update
 - apiGroups:
+    - batch
+  resources:
+    - jobs
+  verbs:
+    - create
+    - delete
+    - get
+- apiGroups:
+    - networking.k8s.io
+  resources:
+    - networkpolicies
+  verbs:
+    - create
+    - get
+- apiGroups:
+    - policy
+  resources:
+    - podsecuritypolicies
+  verbs:
+    - create
+    - get
+    - use
+- apiGroups:
     - rbac.authorization.k8s.io
   resources:
     - clusterrolebindings
   verbs:
     - create
+    - get
 - apiGroups:
     - rbac.authorization.k8s.io
   resources:
     - clusterroles
   verbs:
     - bind
+    - create
+    - get
 - apiGroups:
     - ""
   resources:
     - services
     - serviceaccounts
   verbs:
+    - get
     - create
 - apiGroups:
     - apps
   resources:
     - deployments
   verbs:
+    - get
     - create
 - apiGroups:
     - ""
@@ -88,6 +116,7 @@ rules:
   resources:
     - pods
   verbs:
+    - get
     - list
 - apiGroups:
     - ""
