--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,12 +2,37 @@ version: 2.1
 orbs:
   architect: giantswarm/architect@0.8.14
 
+jobs:
+  build:
+    machine: true
+    steps:
+      - checkout
+      - run: |
+          wget -q $(curl -sS -H "Authorization: token $RELEASE_TOKEN" https://api.github.com/repos/giantswarm/architect/releases/latest | grep browser_download_url | head -n 1 | cut -d '"' -f 4)
+          chmod +x ./architect
+          ./architect version
+      - run: ./architect build
+      - store_test_results:
+          path: /tmp/results
+      - persist_to_workspace:
+          root: .
+          paths:
+            - ./app-operator
+            - ./architect
+  deploy:
+    machine: true
+    steps:
+      - checkout
+      - attach_workspace:
+          at: .
+      - deploy:
+          command: |
+            ./architect deploy
+
 workflows:
   build:
     jobs:
-      - architect/go-build:
-          name: go-build
-          binary: app-operator
+      - build:
           filters:
             tags:
               only: /^v.*/
@@ -18,11 +43,7 @@ workflows:
           username_envar: "QUAY_USERNAME"
           password_envar: "QUAY_PASSWORD"
           requires:
-            - go-build
-          filters:
-            # Trigger the job also on git tag.
-            tags:
-              only: /^v.*/
+            - build
 
       - architect/push-to-docker:
           name: push-app-operator-to-aliyun
@@ -30,11 +51,15 @@ workflows:
           username_envar: "ALIYUN_USERNAME"
           password_envar: "ALIYUN_PASSWORD"
           requires:
-            - go-build
+            - build
           filters:
             branches:
-              only: master
-            # Trigger the job also on git tag.
-            tags:
-              only: /^v.*/
+              only: thiccc
 
+      - deploy:
+          name: deploy
+          requires:
+            - push-app-operator-to-aliyun
+          filters:
+            branches:
+              only: thiccc
