--- a/helm/app-operator/templates/rbac.yaml
+++ b/helm/app-operator/templates/rbac.yaml
@@ -6,17 +6,17 @@ metadata:
     {{- include "labels.common" . | nindent 4 }}
 rules:
 - apiGroups:
-  - apiextensions.k8s.io
+    - apiextensions.k8s.io
   resources:
-  - customresourcedefinitions
+    - customresourcedefinitions
   verbs:
-  - "*"
+    - "*"
 - apiGroups:
-  - apiextensions.k8s.io
+    - apiextensions.k8s.io
   resources:
-  - customresourcedefinitions/status
+    - customresourcedefinitions/status
   verbs:
-  - "*"
+    - "*"
 - apiGroups:
     - application.giantswarm.io
   resources:
@@ -52,42 +52,71 @@ rules:
     - patch
     - update
 - apiGroups:
-  - "rbac.authorization.k8s.io"
+    - batch
   resources:
-  - clusterrolebindings
+    - jobs
   verbs:
-  - "create"
+    - create
+    - delete
+    - get
 - apiGroups:
-  - "rbac.authorization.k8s.io"
+    - networking.k8s.io
   resources:
-  - clusterroles
+    - networkpolicies
   verbs:
-  - "bind"
+    - create
+    - get
 - apiGroups:
-  - ""
+    - policy
   resources:
-  - services
-  - serviceaccounts
+    - podsecuritypolicies
   verbs:
-  - "create"
+    - create
+    - get
+    - use
 - apiGroups:
-  - extensions
+    - rbac.authorization.k8s.io
   resources:
-  - deployments
+    - clusterrolebindings
   verbs:
-  - 'create'
+    - create
+    - get
 - apiGroups:
-  - ""
+    - rbac.authorization.k8s.io
   resources:
-  - configmaps
-  - secrets
+    - clusterroles
   verbs:
-  - "*"
+    - bind
+    - create
+    - get
+- apiGroups:
+    - ""
+  resources:
+    - services
+    - serviceaccounts
+  verbs:
+    - get
+    - create
+- apiGroups:
+    - apps
+  resources:
+    - deployments
+  verbs:
+    - get
+    - create
+- apiGroups:
+    - ""
+  resources:
+    - configmaps
+    - secrets
+  verbs:
+    - "*"
 - apiGroups:
     - ""
   resources:
     - pods
   verbs:
+    - get
     - list
 - apiGroups:
     - ""
