--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,6 +6,7 @@ workflows:
   build:
     jobs:
       - architect/go-build:
+          context: architect
           name: go-build
           binary: app-operator
           filters:
@@ -13,6 +14,7 @@ workflows:
               only: /^v.*/
 
       - architect/push-to-docker:
+          context: architect
           name: push-app-operator-to-quay
           image: "quay.io/giantswarm/app-operator"
           username_envar: "QUAY_USERNAME"
@@ -25,6 +27,7 @@ workflows:
               only: /^v.*/
 
       - architect/push-to-docker:
+          context: architect
           name: push-app-operator-to-aliyun
           image: "registry-intl.cn-shanghai.aliyuncs.com/giantswarm/app-operator"
           username_envar: "ALIYUN_USERNAME"
@@ -40,6 +43,7 @@ workflows:
 
       # build and push chart to app catalog
       - architect/push-to-app-catalog:
+          context: architect
           name: push-app-operator-to-control-plane-app-catalog
           app_catalog: "control-plane-catalog"
           app_catalog_test: "control-plane-test-catalog"
