--- a/helm/app-operator/Chart.yaml
+++ b/helm/app-operator/Chart.yaml
@@ -2,5 +2,5 @@ apiVersion: v1
 description: A Helm chart for the app-operator
 home: https://github.com/giantswarm/app-operator
 name: app-operator
-appVersion: [[ .AppVersion ]]
-version: [[ .Version ]]
+appVersion: 1.0.0
+version: 1.0.0
