adding helm2 to branches in github action

--- a/.github/workflows/zz_generated.create_release.yaml
+++ b/.github/workflows/zz_generated.create_release.yaml
@@ -8,6 +8,7 @@ on:
     branches:
       - 'legacy'
       - 'master'
+      - 'helm2'
       - 'release-v*.*.x'
       # "!" negates previous positive patterns so it has to be at the end.
       - '!release-v*.x.x'
