--- a/.github/workflows/zz_generated.create_release_pr.yaml
+++ b/.github/workflows/zz_generated.create_release_pr.yaml
@@ -7,6 +7,7 @@ on:
   push:
     branches:
       - 'master#release#v*.*.*'
+      - 'helm2#release#v*.*.*'
       - 'legacy#release#v*.*.*'
       - 'release-v*.*.x#release#v*.*.*'
       # "!" negates previous positive patterns so it has to be at the end.
