Add listing deployments to clusterrole

--- a/helm/app-operator/templates/rbac.yaml
+++ b/helm/app-operator/templates/rbac.yaml
@@ -107,8 +107,9 @@ rules:
   resources:
     - deployments
   verbs:
-    - get
     - create
+    - get
+    - list
 - apiGroups:
     - ""
   resources:
