Use checksum annotation instead of helm revision for rolling pods (#502)
* Use checksum annotation instead of helm revision for rolling pods

* Use app.giantswarm.io for annotation

* Quote checksum

* Add changelog

* improve changelog

--- a/helm/app-operator/templates/deployment.yaml
+++ b/helm/app-operator/templates/deployment.yaml
@@ -18,7 +18,7 @@ spec:
       labels:
         {{- include "labels.selector" . | nindent 8 }}
       annotations:
-        releaseRevision: {{ .Release.Revision | quote }}
+        app.giantswarm.io/config-checksum: {{ include (print $.Template.BasePath "/configmap.yaml") . | sha256sum | quote }}
     spec:
       volumes:
       - name: {{ include "name" . }}-configmap
