--- a/helm/app-operator/values.yaml
+++ b/helm/app-operator/values.yaml
@@ -26,6 +26,9 @@ Installation:
         Address: ""
     Registry:
       Domain: quay.io
+    Secret:
+      AppOperator:
+        WebhookAuthToken: ""
 
 project:
   branch: "[[ .Branch ]]"
