Make cache TTL for removed finalizers configurable

--- a/helm/app-operator/values.yaml
+++ b/helm/app-operator/values.yaml
@@ -30,6 +30,9 @@ Installation:
       AppOperator:
         WebhookAuthToken: ""
 
+operatorkit:
+  removedFinalizersCacheTTL: "15m" 
+
 project:
   branch: "[[ .Branch ]]"
   commit: "[[ .SHA ]]"
