Fix integration test

--- a/helm/app-operator/templates/configmap.yaml
+++ b/helm/app-operator/templates/configmap.yaml
@@ -25,3 +25,5 @@ data:
         incluster: true
       operatorkit:
         resyncPeriod: '{{ .Values.operatorkit.resyncPeriod }}' 
+      provider:
+        kind: '{{ .Values.Installation.V1.Provider.Kind }}'
